--- a/localization/english/fodlan_culture_l_english.yml
+++ b/localization/english/fodlan_culture_l_english.yml
@@ -82,6 +82,8 @@
  kudamlar_collective_noun:0 "Kudamlarite"
  denatlar:0 "Denatlian"
  denatlar_collective_noun:0 "Denatlian"
+ ailish:0 "Ailish"
+ ailish_collective_noun:0 "Ailish"
  
  #traditions
  tradition_crest_succession_name:0 "Crest Succession"
