--- a/localization/english/fodlan_religion_l_english.yml
+++ b/localization/english/fodlan_religion_l_english.yml
@@ -186,3 +186,15 @@
  mekeal:0 "Mekeal"
  mekeal_desc:0 "The faith of the Desert Lord himself, these Srengites see themselves as the true followers of their lord known as Mekeal and often clash with their more bloodthirsty kin, though they too do not tolerate weakness from both their own and the people of Fodlan they would only bring slaves and plunder from their raids for their lord does not look kindly upon such dark ways"
  mekeal_adj:0 "Mekeal"
+ 
+ kreasti:0 "Kreasti"
+ kreasti_desc:0 "Close to the mountains, these worshippers live their lives in conflict."
+ kreasti_adj:0 "Kreasti"
+ 
+ laguz_religion:0 "Laguz"
+ laguz_religion_desc:0 "UNDER CONSTRUCTION AND TEMPORARY"
+ laguz_religion_adj:0 "Laguz"
+ 
+ laguz_pagan:0 "Laguz"
+ laguz_pagan_desc:0 "UNDER CONSTRUCTION AND TEMPORARY"
+ laguz_pagan_adj:0 "Laguz"
