Updated Culture Name Localization
Hopefully I got all the cultures in the mod that didn't already have a localized name. I also adjusted the Leicester culture's name to the real life demonym of Leicester and fixed the Albinean culture name mistake.

--- a/localization/english/fodlan_culture_l_english.yml
+++ b/localization/english/fodlan_culture_l_english.yml
@@ -28,8 +28,8 @@
  #culture
  high_fodlan:0 "High Fodlan"
  high_fodlan_collective_noun:0 "High Fodlan"
- leicester:0 "Leicester"
- leicester_collective_noun:0 "Leicester"
+ leicester:0 "Leicesterian"
+ leicester_collective_noun:0 "Leicesterian"
  faerghus:0 "Faerghus"
  faerghus_collective_noun:0 "Faerghus"
  adrestian:0 "Adrestian"
@@ -47,7 +47,7 @@
  morfis:0 "Morfist"
  morfis_collective_noun:0 "Morfise"
  sreng:0 "Srengi"
- sreng_collective_noun:0 "Srengri"
+ sreng_collective_noun:0 "Srengi"
  cermaite:0 "Cermaitan"
  cermaitan_collective_noun:0 "Cermaitan"
  aengese:0 "Aengisian"
@@ -62,8 +62,8 @@
  dantan_collective_noun:0 "Dantanian"
  nuada:0 "Nuadan"
  nuada_collective_noun:0 "Nuadan"
- albinia:0 "Albinian"
- albinian_collective_noun:0 "Albinian"
+ albinean:0 "Albinean"
+ albinean_collective_noun:0 "Albinean"
  wolfskin:0 "Wolfskin"
  wolfskin_collective_noun:0 "Wolfskin"
  kitsune:0 "Kitsune"
@@ -86,6 +86,54 @@
  ailish_collective_noun:0 "Ailish"
  shangri_la:0 "Shangri La"
  shangri_la_collective_noun:0 "Shangri La"
+ saqqaqi:0 "Saqqaqi"
+ saqqaqi_collective_noun:0 "Saqqaqi"
+ avanertun:0 "Avanertun"
+ avanertun_collective_noun:0 "Avanertun"
+ pamese:0 "Pamese"
+ pamese_collective_noun:0 "Pamese"
+ jibadi:0 "Jibadi"
+ jibadi_collective_noun:0 "Jibadi"
+ inevhan:0 "Inevhan"
+ inevhan_collective_noun:0 "Inevhani"
+ shunish:0 "Shunish"
+ shunish_collective_noun:0 "Shunish"
+ brigantine:0 "Brigantine"
+ brigantine_collective_noun:0 "Brigantine"
+ imbolaic:0 "Imbolaic"
+ imbolaic_collective_noun:0 "Imbolaic"
+ kaleis:0 "Kaleis"
+ kaleis_collective_noun:0 "Kaleisite"
+ brionic:0 "Brionic"
+ brionic_collective_noun:0 "Brionic"
+ reissling:0 "Reissling"
+ reissling_collective_noun:0 "Reissling"
+ sirenic:0 "Sirenic"
+ sirenic_collective_noun:0 "Sirenic"
+ alesion:0 "Alesionian"
+ alesion_collective_noun:0 "Alesionian"
+ gressig:0 "Gressig"
+ gressig_collective_noun:0 "Gressigite"
+ aksural:0 "Aksural"
+ aksural_collective_noun:0 "Aksural"
+ agnishahri:0 "Agnishahri"
+ agnishahri_collective_noun:0 "Agnishahri"
+ sangpuri:0 "Sangpuri"
+ sangpuri_collective_noun:0 "Sangpuri"
+ angma:0 "Angma"
+ angma_collective_noun:0 "Angma"
+ chakhtami:0 "Chakhtami"
+ chakhtami_collective_noun:0 "Chakhtami"
+ ikhtin:0 "Ikhtinite"
+ ikhtin_collective_noun:0 "Ikhtinite"
+ qutummi:0 "Qutummi"
+ qutummi_collective_noun:0 "Qutummi"
+ eriset:0 "Eriset"
+ eriset_collective_noun:0 "Eriset"
+ apatol:0 "Apatolian"
+ apatol_collective_noun:0 "Apatolian"
+ galzum:0 "Galzumite"
+ galzum_collective_noun:0 "Galzumite"
 
  
  #traditions
