--- a/localization/english/fodlan_leicester_l_english.yml
+++ b/localization/english/fodlan_leicester_l_english.yml
@@ -16,7 +16,7 @@
  call_alliance_tooltip:0 "Call on the alliance"
  call_alliance.tt:0 "Send Messengers to the lords of the alliance to call them to war."
  called_the_alliance:0 "Called The Alliance To War"
- called_the_alliance_desc:0 "This character has called the Leicester Alliance to an offensive war. The autonomous lords of leicester dont like that very much."
+ called_the_alliance_desc:0 "This character has called the Leicester Alliance to an offensive war. The autonomous lords of Leicester are not pleased."
  FOD_alliance.1.t:0 "The Alliance Calls For Aid"
  FOD_alliance.1.desc:0 "These are desperate times indeed; [liege_desc.GetLiege.GetFirstName] has called the Alliance to arms. Whether the Alliance truly faces an unprecedented threat or [liege_desc.GetLiege.GetFirstName] simply intends to further [liege_desc.GetLiege.GetHerHis] own ambitions, the fact stands that the Alliance will be plunged into turmoil. \n\nRegardless, [liege_desc.GetLiege.GetFirstName] is only the leader of the Alliance, not our overlord, and we do not need to answer the call if we do not wish to. War is not a decision to be made lightly. What shall be done?"
  FOD_alliance.1.a:0 "Gather our banners. We ride!"
@@ -51,6 +51,10 @@
  bad_stewardship_debate_modifier:0 "Poor Economic Policy"
  debate_impressed_opinion:0 "Impressed at Alliance Debate"
  debate_unimpressed_opinion:0 "Unimpressed at Alliance Debate"
+ friend_alliance_debate:0 "[CHARACTER.GetShortUIName|U] supported [TARGET_CHARACTER.GetShortUINamePossessiveNoTooltip] policies in an Alliance debate."
+ friend_alliance_debate_corresponding:0 "[TARGET_CHARACTER.GetShortUIName|U] supported [CHARACTER.GetShortUINamePossessiveNoTooltip] policies in an Alliance debate."
+ rival_alliance_debate:0 "[CHARACTER.GetShortUIName|U] dismissed [TARGET_CHARACTER.GetShortUINamePossessiveNoTooltip] policies in an Alliance debate."
+ rival_alliance_debate_corresponding:0 "[TARGET_CHARACTER.GetShortUIName|U] dismissed [CHARACTER.GetShortUINamePossessiveNoTooltip] policies in an Alliance debate."
  FOD_alliance.6.t:0 "Extra Development Funds"
  FOD_alliance.6.desc:0 "A recent windfall has graced the Alliance-- namely, a sizable donation from a wealthy merchant who wished to see Alliance land developed. The Alliance Roundtable agrees the money would best be spent on masons, carpenters, and other such skilled artisans. Each great lord predictably proposes their own territory receive this aid. Some suggest a lesser noble might receive the aid, or even my own territory. The choices fall on me."
  FOD_alliance.6.a:0 "The Leader knows what is best for the Alliance."
@@ -81,6 +85,9 @@
  FOD_alliance.9.c:0 "I can make [candidate.GetHerHim] look foolish by sabotaging [candidate.GetHerHis] equipment."
  FOD_alliance.9.c.success:0 "Nobody suspects a thing."
  FOD_alliance.9.c.failure:0 "I am caught in the act."
+ friend_alliance_tournament:0 "[CHARACTER.GetShortUIName|U] and [TARGET_CHARACTER.GetShortUIName] bonded after speaking at a tournament."
+ rival_alliance_tournament:0 "[CHARACTER.GetShortUIName] took an opportunity to sabotage [TARGET_CHARACTER.GetShortUIName] at a tournament."
+ rival_alliance_tournament_corresponding:0 "[TARGET_CHARACTER.GetShortUIName] took an opportunity to sabotage [CHARACTER.GetShortUIName] at a tournament."
  alliance_gov_switch_decision:0 "Formally Join Alliance"
  alliance_gov_switch_decision_tooltip:0 "Change [government|E] type to Alliance Feudalism."
  alliance_gov_switch_desc:0 "I swear fealty to a member of the Leicester Alliance, but until now have not enjoyed all the privileges of Alliance membership. That changes today."
