--- a/localization/english/fodlan_tenets_and_doctrines_l_english.yml
+++ b/localization/english/fodlan_tenets_and_doctrines_l_english.yml
@@ -100,7 +100,7 @@
  tenet_durga_abaka_name:0 "Durga Abaka"
  tenet_durga_abaka_desc:0 ""
 
- tenet_bisalalinga_name:0 ""Bisalalinga"
+ tenet_bisalalinga_name:0 "Bisalalinga"
  tenet_bisalalinga_desc:0 ""
 
  tenet_baildatyn_tsus_name:0 "Baildatyn Tsus"
