(Hopefully) dealing with the clothes-less Almyran & Morfite Problem once and for all
So the problem was that the only clothing_gfx the Almyrans and Morfites had were locked behind a DLC that many of us probably don't have. That has been fixed.

Oh, and I may have also changed the Almyrans to be more Iranian, but that's besides the point. No longer will the Almyrans and Morfites be without clothing!

--- a/localization/english/fodlan_culture_l_english.yml
+++ b/localization/english/fodlan_culture_l_english.yml
@@ -60,8 +60,8 @@
  reqonese_collective_noun:0 "Reqonese"
  dantan:0 "Dantanian"
  dantan_collective_noun:0 "Dantanian"
- nuada:0 "Nuadan"
- nuada_collective_noun:0 "Nuadan"
+ nuadan:0 "Nuadan"
+ nuadan_collective_noun:0 "Nuadan"
  albinean:0 "Albinean"
  albinean_collective_noun:0 "Albinean"
  wolfskin:0 "Wolfskin"
